--- a/vividus-to-xray-exporter/src/main/resources/application.properties
+++ b/vividus-to-xray-exporter/src/main/resources/application.properties
@@ -19,3 +19,7 @@ jira.password=
 
 xray-exporter.assignee=#{null}
 xray-exporter.editable-statuses=
+xray-exporter.jira-server-key=
+
+property-mapper.prefix-separator=.
+property-mapper.naming-strategy=KEBAB_CASE
