--- a/vividus-to-zephyr-exporter/src/main/resources/application.properties
+++ b/vividus-to-zephyr-exporter/src/main/resources/application.properties
@@ -35,3 +35,4 @@ zephyr.statuses.SKIPPED=SCHEDULED
 zephyr.statuses.PASSED=PASSED
 
 zephyr.exporter.statuses-of-test-cases-to-add-to-execution=FAILED,BROKEN,PENDING,UNKNOWN,SKIPPED,PASSED
+zephyr.exporter.jira-server-key=
