--- a/vividus-facade-jira/build.gradle
+++ b/vividus-facade-jira/build.gradle
@@ -5,7 +5,9 @@ dependencies {
     implementation project(':vividus-util')
 
     implementation(group: 'org.slf4j', name: 'slf4j-api', version: versions.slf4j)
+    implementation(group: 'com.google.guava', name: 'guava', version: versions.guava)
 
+    testImplementation(group: 'org.hamcrest', name: 'hamcrest', version: versions.hamcrest)
     testImplementation platform(group: 'org.junit', name: 'junit-bom', version: versions.junit)
     testImplementation(group: 'org.junit.jupiter', name: 'junit-jupiter')
     testImplementation(group: 'org.mockito', name: 'mockito-junit-jupiter', version: versions.mockito)
